--- a/views/settings_views.xml
+++ b/views/settings_views.xml
@@ -171,7 +171,7 @@
                     </div>
                     
                     <!-- API Usage Statistics -->
-                    <h2>📊 API Usage Statistics</h2>
+                    <h2>API Usage Statistics</h2>
                     <div class="row mt16 o_settings_container">
                         <div class="col-12 col-lg-6 o_setting_box">
                             <div class="o_setting_right_pane">
