--- a/views/employee_views.xml
+++ b/views/employee_views.xml
@@ -63,6 +63,15 @@
                             <field name="language_skills" widget="text_area" placeholder="Languages and proficiency levels"/>
                         </group>
                     </group>
+                    <group string="Communication (WhatsApp)">
+                        <group>
+                            <field name="whatsapp_number" placeholder="+212612345678"/>
+                            <field name="whatsapp_notifications_enabled"/>
+                        </group>
+                        <group>
+                            <field name="whatsapp_verified" readonly="1"/>
+                        </group>
+                    </group>
                     
                     <notebook>
                         <page string="Certifications">
@@ -117,6 +126,7 @@
     <record id="view_employee_analysis_form" model="ir.ui.view">
         <field name="name">hr.employee.analysis.simplified</field>
         <field name="model">hr.employee</field>
+        <field name="priority">999</field>
         <field name="arch" type="xml">
             <form string="Employee Analysis" create="false" edit="false" delete="false">
                 <sheet style="background: #f5f7fa;">
