--- a/views/internship_views.xml
+++ b/views/internship_views.xml
@@ -43,6 +43,7 @@
                     <group>
                         <group>
                             <field name="student_email"/>
+                            <field name="student_phone"/>
                             <field name="level"/>
                             <field name="specialization"/>
                             <field name="internship_type"/>
