--- a/views/training_views.xml
+++ b/views/training_views.xml
@@ -9,17 +9,66 @@
             <field name="arch" type="xml">
                 <tree>
                     <field name="name"/>
+                    <field name="employee_id"/>
                     <field name="start_date"/>
                     <field name="duration"/>
                     <field name="trainer_id"/>
-                    <field name="status"/>
+                    <field name="status" widget="badge" decoration-info="status == 'planned'" decoration-warning="status == 'in_progress'" decoration-success="status == 'completed'"/>
                 </tree>
+            </field>
+        </record>
+        
+        <!-- Training Kanban View -->
+        <record id="view_training_kanban" model="ir.ui.view">
+            <field name="name">Training Kanban</field>
+            <field name="model">ensa.training</field>
+            <field name="arch" type="xml">
+                <kanban default_group_by="status" class="o_kanban_small_column">
+                    <field name="name"/>
+                    <field name="employee_id"/>
+                    <field name="status"/>
+                    <field name="start_date"/>
+                    <field name="category"/>
+                    <templates>
+                        <t t-name="kanban-box">
+                            <div class="oe_kanban_global_click">
+                                <div class="o_kanban_record_top">
+                                    <div class="o_kanban_record_headings">
+                                        <strong class="o_kanban_record_title"><field name="name"/></strong>
+                                    </div>
+                                    <span class="badge badge-pill badge-light"><field name="category"/></span>
+                                </div>
+                                <div class="o_kanban_record_body mt-2">
+                                    <div class="text-muted mb-1">
+                                        <i class="fa fa-user"/> <field name="employee_id"/>
+                                    </div>
+                                    <div class="text-muted">
+                                        <i class="fa fa-calendar"/> <field name="start_date"/>
+                                    </div>
+                                </div>
+                            </div>
+                        </t>
+                    </templates>
+                </kanban>
+            </field>
+        </record>
+
+        <!-- Training Calendar View -->
+        <record id="view_training_calendar" model="ir.ui.view">
+            <field name="name">Training Calendar</field>
+            <field name="model">ensa.training</field>
+            <field name="arch" type="xml">
+                <calendar string="Trainings" date_start="start_date" date_stop="end_date" color="category">
+                    <field name="name"/>
+                    <field name="employee_id"/>
+                    <field name="status"/>
+                </calendar>
             </field>
         </record>
         <record id="action_ensa_training" model="ir.actions.act_window">
            <field name="res_model">ensa.training</field>
            <field name="name">Training Programs</field>
-           <field name="view_mode">tree,form</field>
+           <field name="view_mode">kanban,tree,calendar,form</field>
            <field name="context">{'default_start_date': context_today().strftime('%Y-%m-%d')}</field>
            <field name="help" type="html">
                <p class="o_view_nocontent_smiling_face">
@@ -44,6 +93,7 @@
                     <sheet>
                         <group>
                             <field name="name"/>
+                            <field name="employee_id"/>
                             <field name="start_date"/>
                             <field name="end_date"/>
                             <field name="duration"/>
@@ -67,7 +117,7 @@
         <record id="action_training_view" model="ir.actions.act_window">
             <field name="name">Trainings</field>
             <field name="res_model">ensa.training</field>
-            <field name="view_mode">tree,form</field>
+            <field name="view_mode">kanban,tree,calendar,form</field>
         </record>
     </data>
 </odoo>
